--- a/package.json
+++ b/package.json
@@ -67,13 +67,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/user/oh-my-droid.git"
+    "url": "git+https://github.com/Kartvya69/oh-my-droid.git"
   },
-  "homepage": "https://github.com/user/oh-my-droid#readme",
+  "homepage": "https://github.com/Kartvya69/oh-my-droid#readme",
   "bugs": {
-    "url": "https://github.com/user/oh-my-droid/issues"
+    "url": "https://github.com/Kartvya69/oh-my-droid/issues"
   },
-  "author": "User",
+  "author": "Kartvya69 <kartvya@proton.me>",
   "license": "MIT",
   "keywords": [
     "factory",
